<resources>
    <string name="app_name">TareasYa</string>
    <!-- ActivityInicio -->
    <string name="titulo_app">TareasYa</string>
    <string name="label_email">Correo electrónico</string>
    <string name="hint_email">usuario@gmail.com</string>
    <string name="label_password">Contraseña</string>
    <string name="hint_password">Ingresa tu contraseña</string>
    <string name="texto_digito">Digito</string>
    <string name="btn_iniciar_sesion">INICIAR SESIÓN</string>
    <string name="texto_registro">No tienes cuenta? Regístrate</string>
    <string name="mostrar_password">Mostrar</string>
    <string name="ocultar_password">Ocultar</string>
    <string name="desc_logo">Logo de TareasYa</string>


    <!-- ActivityPrincipal -->
    <string name="buscar_tareas">Buscar tareas..</string>
    <string name="categorias">Categorías</string>
    <string name="categoria_personal">Personal</string>
    <string name="categoria_trabajo">Trabajo</string>
    <string name="categoria_estudio">Estudio</string>
    <string name="categoria_otros">Otros</string>
    <string name="agregar_tarea">AGREGAR TAREA</string>
    <string name="desc_fab">Agregar nueva tarea</string>


    <!-- ActivityAgregarTarea -->
    <string name="agregar_tareaA">Agregar Tarea</string>
    <string name="titulo_tarea">Título de la tarea</string>
    <string name="hint_titulo">Ingresa el título</string>
    <string name="descripcion">Descripción</string>
    <string name="hint_descripcion">Describe la tarea..</string>
    <string name="categoria">Categoría:</string>
    <string name="fecha">Fecha:</string>
    <string name="hint_fecha">15/11/2023</string>
    <string name="hora">Hora:</string>
    <string name="hint_hora">10:30 AM</string>
    <string name="prioridad">Prioridad:</string>
    <string name="guardar_tarea">GUARDAR TAREA</string>

    <!-- Arrays para Spinners -->
    <string-array name="categorias_array">
        <item>Personal</item>
        <item>Trabajo</item>
        <item>Estudio</item>
        <item>Otros</item>
    </string-array>

    <string-array name="prioridades_array">
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
    </string-array>

    <!-- Categoria -->
    <string name="NEWCATEGORÍA">NUEVA CATEGORÍA:</string>
    <string name="Categories">Categories:</string>
    <string name="NombreCategoria">Nombre de la Categoria:</string>
    <string name="NroCategoria">5 tareas</string>

    <string name="ir_a_categorias">Ir a categorías</string>
    <string name="gestionar_categorias">Gestionar categorías</string>
    <string name="cerrar">Cerrar</string>
    <string name="color_categoria">Color de la categoría</string>
    <string name="icono_categoria">Icono de la categoría</string>
    <string name="descripcion_opcional">Descripción (opcional)</string>
    <string name="crear_categoria">Crear Categoría</string>

    <!-- Agregar Usuario -->
    <string name="titulo">Registrar Nuevo Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="ape_paterno">Apellido Paterno</string>
    <string name="ape_materno">Apellido Materno</string>
    <string name="correoUsuario">correo electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="Registrar">Registrar</string>
    <string name="Cancelar">Cancelar</string>

</resources>